--- a/transfer-learning/Transfer_Learning_Solution.ipynb
+++ b/transfer-learning/Transfer_Learning_Solution.ipynb
@@ -27,10 +27,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VGG16 Parameters: 553MB [00:29, 18.8MB/s]                              \n"
+      "Parameter file already exists!\n"
      ]
     }
    ],
@@ -75,15 +75,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Flowers Dataset: 229MB [00:03, 60.3MB/s]                              \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tarfile\n",
     "\n",
@@ -168,10 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,41 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/max/projects/udacity/deep-learning/transfer-learning/tensorflow_vgg/vgg16.npy\n",
+      "npy file loaded\n",
+      "build model started\n",
+      "build model finished: 0s\n",
+      "Starting daisy images\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/max/opt/anaconda3/envs/transfer-learning/lib/python3.6/site-packages/skimage/transform/_warps.py:84: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
+      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 images processed\n",
+      "20 images processed\n",
+      "30 images processed\n",
+      "40 images processed\n",
+      "50 images processed\n",
+      "60 images processed\n",
+      "70 images processed\n",
+      "80 images processed\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the batch size higher if you can fit in in your GPU memory\n",
     "batch_size = 10\n",
@@ -618,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
