--- a/dcgan-svhn/DCGAN.ipynb
+++ b/dcgan-svhn/DCGAN.ipynb
@@ -562,7 +562,7 @@
     "batch_size = 128\n",
     "epochs = 25\n",
     "alpha = 0.2\n",
-    "beta1 = 0.5\n",
+    "beta1 = 0.5a\n",
     "\n",
     "# Create the network\n",
     "net = GAN(real_size, z_size, learning_rate, alpha=alpha, beta1=beta1)"
@@ -712,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
