--- a/dcgan-svhn/DCGAN.ipynb
+++ b/dcgan-svhn/DCGAN.ipynb
@@ -562,7 +562,7 @@
     "batch_size = 128\n",
     "epochs = 25\n",
     "alpha = 0.2\n",
-    "beta1 = 0.5a\n",
+    "beta1 = 0.5\n",
     "\n",
     "# Create the network\n",
     "net = GAN(real_size, z_size, learning_rate, alpha=alpha, beta1=beta1)"
